# dpdk-stable

./: README_rz
.github/: README
app/cma/: meson.build  test_t2h_cma_mmap.c
drivers/net/: meson.build
drivers/net/renesas/: meson.build  t2h_ethdev.c  t2h_ethdev.h  t2h_pmd_logs.h  t2h_regs.h  t2h_rxtx.c  t2h_rxtx.h  t2h_uio.c  t2h_uio.h  t2h_util.c  t2h_util.h
lib/mbuf/: rte_mbuf.c
lib/mempool/: def_use_rz_cma.h  meson.build  rte_mempool.c  t2h_mem.c  version.map
